--- a/index.html
+++ b/index.html
@@ -8,17 +8,57 @@
 </head>
 
 <body class="bg-gray-100 flex flex-col items-center p-4">
-    <div class="max-w-2xl w-full bg-white rounded shadow p-6">
+  <!-- Pre-game screen -->
+  <div id="team-input-screen" class="max-w-2xl w-full bg-white rounded shadow p-6">
+    <h1 class="text-3xl font-bold mb-4 text-center">Enter Team Names</h1>
+    <div id="team-names" class="mb-4">
+      <input
+        id="team-name-input"
+        type="text"
+        class="w-full p-2 border rounded mb-4"
+        placeholder="Enter a team name..."
+      />
+      <button
+        id="add-team-btn"
+        class="w-full bg-blue-500 text-white py-2 rounded mb-4"
+      >
+        Add Team
+      </button>
+    </div>
+    <button id="start-game-btn" class="w-full bg-green-500 text-white py-2 rounded">
+      Start Game
+    </button>
+  </div>
+
+  <!-- Game screen -->
+  <div id="game-screen" class="hidden flex w-full max-w-4xl bg-white rounded shadow p-6">
+    <!-- Sidebar for team names -->
+    <div id="team-sidebar" class="w-1/4 border-r pr-4">
+      <h2 class="text-2xl font-bold mb-4">Teams</h2>
+      <ul id="team-list" class="list-disc pl-4"></ul>
+    </div>
+    <!-- Main game area -->
+    <div class="w-3/4 pl-4">
       <h1 class="text-3xl font-bold mb-4 text-center">Family Feud Game</h1>
       <div id="question" class="text-xl font-medium text-center mb-6">Question will appear here</div>
-      <input id="answer-input" type="text" class="w-full p-2 border rounded mb-4" placeholder="Enter your answer...">
+      <input
+        id="answer-input"
+        type="text"
+        class="w-full p-2 border rounded mb-4"
+        placeholder="Enter your answer..."
+      />
       <button id="submit-btn" class="w-full bg-blue-500 text-white py-2 rounded">Submit</button>
       <div id="answers-grid" class="grid grid-cols-2 gap-4 mt-6"></div>
       <div id="strikes" class="mt-4 text-center text-red-500 text-xl"></div>
-      <button id="next-btn" class="mt-6 w-full bg-green-500 text-white py-2 rounded hidden">Next Question</button>
+      <button id="next-btn" class="mt-6 w-full bg-green-500 text-white py-2 rounded hidden">
+        Next Question
+      </button>
       <button id="reset-btn" class="mt-6 w-full bg-gray-500 text-white py-2 rounded">Reset Game</button>
     </div>
-    <script src="script.js"></script>
-  </body>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+
   
 </html>
