--- a/index.html
+++ b/index.html
@@ -5,6 +5,139 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Family Feud</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+
+    <style>
+      body {
+        background-color: #1a1a2e; /* Dark blue background */
+        color: white; /* Default text color */
+      }
+
+      #team-input-screen,
+      #game-screen {
+        background-color: #0f3460; /* Family Feud blue */
+        border: 3px solid #e94560; /* Vibrant red border */
+      }
+
+      h1,
+      h2 {
+        font-family: 'Arial Black', sans-serif;
+        text-transform: uppercase;
+        color: #ffd700; /* Bold yellow for Family Feud vibe */
+        text-shadow: 2px 2px #000;
+      }
+
+      #question {
+        background-color: #ffd700; /* Yellow background for the question */
+        color: #000; /* Black text for the question */
+        border-radius: 10px;
+        padding: 10px;
+        box-shadow: 0 0 10px 2px #ffd700;
+      }
+
+      #answers-grid div {
+        background-color: #0f3460; /* Family Feud blue for the answers */
+        color: #fff;
+        font-weight: bold;
+        border: 2px solid #ffd700; /* Yellow border around answers */
+        border-radius: 5px;
+        text-align: center;
+        padding: 10px;
+        box-shadow: 0 0 10px 2px #e94560; /* Glow effect */
+      }
+
+      #team-sidebar {
+        background-color: #16213e; /* Darker blue for the sidebar */
+        border-radius: 10px;
+        padding: 15px;
+        box-shadow: 0 0 10px 2px #e94560; /* Red glow */
+      }
+
+      #team-list li {
+        background-color: #e94560; /* Red cards for team names */
+        color: #fff;
+        padding: 10px;
+        margin-bottom: 5px;
+        border-radius: 5px;
+        text-align: center;
+        font-weight: bold;
+        box-shadow: 0 0 5px 1px #ffd700; /* Yellow glow */
+      }
+
+      button {
+        font-family: 'Arial Black', sans-serif;
+        text-transform: uppercase;
+        font-weight: bold;
+        border: none;
+        border-radius: 5px;
+        padding: 10px 20px;
+        margin: 10px 0;
+        box-shadow: 0 0 5px 2px #ffd700;
+        cursor: pointer;
+        transition: all 0.3s ease;
+      }
+
+      button:hover {
+        transform: scale(1.05);
+        box-shadow: 0 0 15px 5px #ffd700;
+      }
+
+      #add-team-btn {
+        background-color: #e94560; /* Red button */
+        color: white;
+      }
+
+      #add-team-btn:hover {
+        background-color: #ffd700; /* Yellow hover */
+        color: black;
+      }
+
+      #start-game-btn {
+        background-color: #1a9cff; /* Blue button */
+        color: white;
+      }
+
+      #start-game-btn:hover {
+        background-color: #ffd700; /* Yellow hover */
+        color: black;
+      }
+
+      #submit-btn {
+        background-color: #1a9cff; /* Blue button for submitting answers */
+        color: white;
+      }
+
+      #submit-btn:hover {
+        background-color: #ffd700;
+        color: black;
+      }
+
+      #next-btn {
+        background-color: #00af91; /* Green for next question */
+        color: white;
+      }
+
+      #next-btn:hover {
+        background-color: #ffd700;
+        color: black;
+      }
+
+      #reset-btn {
+        background-color: #f05454; /* Red for reset */
+        color: white;
+      }
+
+      #reset-btn:hover {
+        background-color: #ffd700;
+        color: black;
+      }
+
+      #strikes {
+        font-family: 'Arial Black', sans-serif;
+        color: #e94560; /* Red for strikes */
+        text-shadow: 2px 2px #000;
+      }
+    </style>
+
 </head>
 
 <body class="bg-gray-100 flex flex-col items-center p-4">
